Adding Scalastyle - Build updated.
Updated the build to add Scalastyle as well as to prepare future
examples to cover Akka and Scalaz.

Worth noting that as part of the I fixed the errors that such tool
marked in the `Equilibrium*.scala` files.